Add coffee info blurb

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 				<strong class="feature">Monday's Coffee Special:</strong> Monday's daily coffee special is <strong class="feature">Pumpkin Spice Latte</strong>, which makes us wish it was always Fall, as this is one of our top sellers!
 			</p>
 
-			<p><span class="feature"><span class="coffeeName">Pumpkin Spice</span> is </span> really really really good!</p>
+			<p><span class="feature"><span class="coffeeName">Pumpkin Spice</span> is </span><span id="coffee-info">blurb goes here</span></p>
 			<p><span class="feature">Enjoy <span class="coffeeName">Pumpkin Spice</span> with our </span>$3.99 chocolate croissant!</p>
 
 			<p>This page demonstrates how to dynamically change multiple html elements based on the day of the week using the Document Object Model (DOM) in JS.</p>
