--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 		</main>
 		<footer>
 			<p><small>&copy; 2022 by 
-				YOUR NAME HERE, All Rights Reserved ~ 
+				Carlos Cruz, All Rights Reserved ~ 
 				<a id="html-checker" href="#">Check HTML</a> ~ 
 				<a id="css-checker" href="#">Check CSS</a></small>
 			</p>
